[gd_scene load_steps=6 format=3 uid="uid://bqm8xvn2qwxqy"]

[ext_resource type="Script" uid="uid://j1k4aqvxs2d4" path="res://scripts/GameMain.gd" id="1_0hdqx"]
[ext_resource type="Script" uid="uid://bfbihqqk7lhcg" path="res://scripts/NoteSpawner.gd" id="2_1hdqx"]
[ext_resource type="Script" uid="uid://cewk6t8hj2yr6" path="res://scripts/DrumController.gd" id="3_2hdqx"]
[ext_resource type="Script" uid="uid://c7hffrvemttou" path="res://scripts/AudioManager.gd" id="4_3hdqx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1hdqx"]
radius = 50.0

[node name="GameMain" type="Node2D"]
script = ExtResource("1_0hdqx")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 24
text = "分数: 0"

[node name="ComboLabel" type="Label" parent="UI"]
offset_left = 952.0
offset_top = 20.0
offset_right = 1132.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 24
text = "连击: 0"
horizontal_alignment = 2

[node name="Instructions" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 580.0
offset_right = 600.0
offset_bottom = 620.0
theme_override_font_sizes/font_size = 16
text = "按 Z/X 击打红色音符 (咚)，按 C/V 击打蓝色音符 (咔)"

[node name="GameArea" type="Node2D" parent="."]

[node name="NotePath" type="Line2D" parent="GameArea"]
points = PackedVector2Array(0, 300, 1152, 300)
width = 5.0
default_color = Color(1, 1, 1, 0.5)

[node name="HitZone" type="Area2D" parent="GameArea"]
position = Vector2(1000, 300)

[node name="HitZoneSprite" type="ColorRect" parent="GameArea/HitZone"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
color = Color(1, 0.5, 0, 0.7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea/HitZone"]
shape = SubResource("CircleShape2D_1hdqx")

[node name="NoteSpawner" type="Node2D" parent="GameArea"]
script = ExtResource("2_1hdqx")

[node name="DrumController" type="Node" parent="."]
script = ExtResource("3_2hdqx")

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("4_3hdqx")

[node name="BGMPlayer" type="AudioStreamPlayer" parent="AudioManager"]

[node name="SFXPlayer" type="AudioStreamPlayer" parent="AudioManager"]
